# novel-reading-assistant

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  batch_analyze.py  batch_extract.py  batch_extract_with_pool.py  bm25_test.py  bm25_test2.py  merge_curated.py  pyproject.toml  test_api.py  test_batch_simple.py  test_doubao.py  test_model_pool.py  test_models.py
.github/workflows/: tests.yml
app/: __init__.py  config.py  service.py
app/answering/: __init__.py  compose.py
app/api/: __init__.py  cli.py
app/bootstrap/: __init__.py  seed.py
app/ingestion/: chapter_parser.py  chunker.py  pipeline.py
app/knowledge/: cards.py
app/llm/: model_pool.py  volcengine.py
app/progress/: __init__.py  state.py
app/retrieval/: alias_resolver.py  retrieve.py  vector_index.py
app/storage/: sqlite_store.py
data/curated/zaizhitianxia/: character_aliases.curated.csv  character_cards.curated.jsonl  history_cards.curated.jsonl
docs/: AI_HANDOFF.md  skills-playbook.md
examples/: character_aliases.example.csv  character_cards.example.jsonl  history_cards.example.jsonl
tests/: test_alias_resolver.py  test_answer_format.py  test_cards_loader.py  test_chapter_parser.py  test_chunker.py  test_cli_flow.py  test_cli_query_flow.py  test_curated_knowledge_files.py  test_ingest_pipeline.py  test_novel_ingestion.py  test_reading_state.py  test_seed_bootstrap.py  test_service.py  test_smoke.py  test_spoiler_filter.py  test_sqlite_store.py  test_vector_index.py  test_volcengine_client.py
